bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020:4: error: ';' expected but 'return' found.
  }return true
   ^